force-app/main/default/objects/Weekly_Funnel_Summaries__c/Weekly_Funnel_Summaries__c.object-meta.xml
<CustomObject>
    <description>Contains user records with summarized funnel data</description>
    <label>Weekly Funnel Summaries</label>
    <nameField>
        <label>Weekly Funnel Snap Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Funnel Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>