force-app/main/default/objects/Weekly_Funnel_Summaries__c/fields/Weekly_Closed_Discont_Soln_Amt__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Closed_Discont_Soln_Amt__c</fullName>
    <label>Weekly Closed/Discont Soln Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>