force-app/main/default/objects/Weekly_Funnel_Summaries__c/fields/Weekly_Net_New_Soln_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Net_New_Soln_Opp_Amount__c</fullName>
    <label>Weekly Net New Soln Opp Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>