force-app/main/default/objects/Weekly_Funnel_Summaries__c/fields/Weekly_Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Pipeline_Amount__c</fullName>
    <label>Weekly Soln Pipeline Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>