force-app/main/default/objects/Weekly_Funnel_Summaries__c/fields/Weekly_Total_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Total_Funnel__c</fullName>
    <label>Weekly Total Funnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>